--- a/css/home.css
+++ b/css/home.css
@@ -152,7 +152,7 @@ html {
 }
 .flash-wallet .slide-2 .col{
     margin-bottom: 3%;
-    width: 19.5%;
+    width: 16.5%;
     float: left;
 }
 .flash-wallet .slide-2 h2 {margin: 0}
@@ -327,6 +327,9 @@ footer p {
 }
 /*===================*/
 @media all and (max-width: 767px) {
+    .flash-wallet .slide-2 .col{
+        width: 33.33333%;
+    }
     .download-flash h2{text-align: center}
     .download-flash h2.mobile{
         margin-top: 6%;
@@ -341,6 +344,9 @@ footer p {
     .slide-8 ul li img{margin-top: 0}
 }
 @media all and (max-width: 480px) {
+    #content-slide1 h2{
+        font-size: 30px !important;
+    }
     .download-flash .col-box{
         width: 100%;
         margin-top: 5%;
@@ -353,6 +359,11 @@ footer p {
     .flash-wallet a, .flash-wallet p, .flash-wallet h3 {
         font-size: 16px;
         line-height: 24px;
+    }
+}
+@media all and (max-width: 425px) {
+    .flash-wallet .slide-2 .col {
+        width: 50%;
     }
 }
 /*===================*/
