--- a/css/home.css
+++ b/css/home.css
@@ -346,6 +346,17 @@ html {
     min-width: 400px;
 }
 .road-map img.mobile{display: none}
+#create-wallet-btn{
+    position: fixed;
+    bottom: 20px;
+    left: -3px;
+    background-color: #74c543;
+    padding: 5px 12px;
+    border-color: #55A226;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
 /*Footer site*/
 footer .container {
     padding: 2% 0 1%;
