--- a/css/home.css
+++ b/css/home.css
@@ -123,7 +123,8 @@ html {
     font-family: 'Roboto', sans-serif;
     background: #fff;
 }
-.link-top{
+.link-top-container{
+	text-align: right;
 }
 .link-top a{
     color: #7ac2ff;
@@ -229,7 +230,7 @@ html {
     font-size: 25px;
     font-family: 'Open Sans', sans-serif;
     color: #737373;
-    margin: 0;
+    margin-top: 25px;
     line-height: 35px;
     font-weight: bold;
     margin-bottom: 30px;
@@ -291,7 +292,7 @@ html {
     border-top: 1px solid #ddd;
     color: #116bb6;
     border-bottom: 1px solid #ddd;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 .exchanges-section img{
     width: 100%;
@@ -301,7 +302,7 @@ html {
 /* Slide 10 */
 .slide-10{
     background-color: #eaeaea;
-    padding: 2% 0 12%;
+    padding: 2% 0 5%;
 }
 .slide-10 h2,
 .slide-11 h2{
@@ -420,6 +421,13 @@ footer p {
 }
 /*===================*/
 @media all and (max-width: 767px) {
+	.link-top-container{
+		text-align: center;
+		padding-top:15px;
+	}
+	.logo img {
+		max-width: 55%;
+	}
     .road-map img{display: none}
     .road-map img.mobile{
         display: block;
@@ -450,7 +458,7 @@ footer p {
     .slide-8 ul li img{margin-top: 0}
 }
 @media all and (max-width: 480px) {
-
+	
     #content-slide1 h2{
         font-size: 30px !important;
     }
