--- a/css/home.css
+++ b/css/home.css
@@ -133,6 +133,10 @@ html {
 .link-top a:hover{
     color: #fff;
 }
+.link-top a:focus{
+    color: #7ac2ff;
+	text-decoration: none;
+}
 .flash-wallet h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
     font-family: 'Roboto-condensed', sans-serif;
 }
@@ -403,7 +407,7 @@ html {
     -moz-box-shadow: 0px 2px 0px #74C543, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
     box-shadow: 0px 2px 0px #74C543, 0px 3px 15px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
 }
-a.back-to-top-btn:hover, a.back-to-top-btn:active{
+a.back-to-top-btn:hover, a.back-to-top-btn:focus{
 	text-decoration: none;
 }
 .back-to-top-btn {
