Updated team info

--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -271,11 +271,6 @@ a.button.button-rounded.button-reveal.button-large.button-yellow.button-light.tr
 }
 
 /*date:10-4-2018*/
-
-.team-advisors img {
-  width: 80%;
-}
-
 .partners img {
   border-radius: unset;
   margin: auto;
@@ -412,11 +407,24 @@ animation: spin 10s linear infinite;
     font-size: 4.6vw;
   }
 }
-.community-leaders img
+.volunteers-title h4
 {
-width: 80%;
+  font-size: 18px;
 }
-.community-volunteers img
+/*date:12-5-18*/
+@media (min-width: 575px) {
+.community-leader
+  {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  .team-advisors img {
+  width: 80%;
+  }
+}
+.team-title span
 {
-width: 90%;
+  padding: 3px;
 }
