--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -6,12 +6,12 @@
 -----------------------------------------------------------------*/
 
 #slider {
-  background: url('../images/_newsite/bg_hero.jpg') no-repeat center right;
+  background: url('../images/_newsite/update/section-bg.jpeg') no-repeat center right;
   background-size: cover;
 }
 
 #about {
-  background: url('../images/_newsite/bg_section-about.jpg') scroll no-repeat top/cover;
+  background: url('../images/_newsite/update/section-bg.jpeg') scroll no-repeat top/cover;
   padding-top: 80px;
   min-height: 800px;
 }
@@ -35,6 +35,7 @@
 }
 
 
+
 /*Header background color*/
 
 .dark .fancy-title h1, .dark .fancy-title h2, .dark .fancy-title h3, .dark .fancy-title h4, .dark .fancy-title h5, .dark .fancy-title h6 {
@@ -54,7 +55,9 @@ ul.icon-social .fab, .svg-inline--fa {
     font-size: 4.5em;
 	margin: 1em;
 }*/
-
+.color-gold {
+  color: #E0AE27 !important;
+}
 ul.icon-social {
   list-style-type: none;
   margin: 0;
@@ -435,4 +438,7 @@ animation: spin 10s linear infinite;
 .team-title span
 {
   padding: 3px;
+}
+.dark .form-control:not(.not-dark), .dark .sm-form-control:not(.not-dark) {
+  color: #fff !important;
 }
